--- a/CSS/index.css
+++ b/CSS/index.css
@@ -2,6 +2,14 @@
     font-family: "Source Serif 4", serif;
     background-color: whitesmoke
 }
+html{
+    height: 100%;
+}
+body{
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+}
 header{
     display: flex;
     align-items: center;
@@ -11,6 +19,7 @@ header{
     list-style: none;
 }
 li, a{
+    color: black;
     text-decoration: none;
     margin:10px;
 }
@@ -59,6 +68,107 @@ input{
     color:white;
     font-size: 15px;
 }
+.b1{
+    padding-top: 70px;
+}
+.button-3{
+    margin-left: 560px;
+    border: none;
+    background-color: gray;
+    padding: 10px;
+    border-radius: 30px;
+    font-size: 15px;
+}
+h1{
+    font-size: 60px;
+    text-align: center;
+}
+.p2{
+    text-align: center;
+}
+.button-4{
+    border: none;
+    padding:20px;
+    border-radius: 30px;
+    color: white;
+    background-color: black;
+    margin-left: 645px;
+}
+.b3{
+    padding: 30px;
+}
+.p3{
+    font-size: 40px;
+    text-align: center;
+}
+.button-5{
+    border:2px solid black;
+    padding: 20px;
+    border-radius: 30px;
+    margin-left: 570px;
+}
+.b4{
+    padding: 30px;
+    background-color: rgb(227, 189, 94);
+}
+.p4{
+    font-size: 60px;
+    text-align: center;
+    background-color: rgb(227, 189, 94);
+}
+.p5{
+    font-size: 20px;
+    text-align: center;
+    background-color: rgb(227, 189, 94);
+}
+.p6{
+    background-color: rgb(227, 189, 94);
+    text-align: center;
+}
+.button-6{
+    color: white;
+    background-color: black;
+    padding: 20px;
+    border-radius: 30px;
+    border:none;
+    margin-left: 530px;
+}
+.button-7{
+    color: black;
+    background-color: white;
+    padding: 20px;
+    border-radius: 30px;
+}
+footer{
+    margin: auto;
+}
+.box-1{
+    display: flex;
+    align-items: center;
+}
+.list-2{
+    display: flex;
+    list-style: none;    
+}
+.p-2{
+    font-size: 30px;
+    font-family:  "Pacifico", cursive;
+}
+.fa-brands{
+    padding: 10px;
+}
+.box-2{
+    display: flex;
+}
+.list-3{
+    list-style: none;
+    display: flex;
+    margin-right: 80px;
+}
 
+.list-4{
+    list-style: none;
+    display: flex;
+}
 
 
